--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "bootstrap-sass": "^3.3.7",
+    "lodash": "^4.17.4",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0"
   },
